# any-tts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/: benchmark_omnivoice.rs  denoise_audio.rs  generate_comparison_suite.rs  generate_kokoro.rs  generate_omnivoice.rs  generate_qwen3_tts.rs  generate_vibevoice.rs  generate_vibevoice_realtime.rs  generate_voxtral.rs  model_comparison_texts.json  omnivoice_example.json  quick_test_qwen3.rs  vibevoice_example.json
src/: audio.rs  config.rs  device.rs  download.rs  error.rs  lib.rs  mel.rs  tensor_utils.rs  tokenizer.rs  traits.rs
src/audio/: decode.rs  denoise.rs
src/layers/: attention.rs  conv.rs  lstm.rs  mlp.rs  mod.rs  transformer.rs
src/models/: mod.rs
src/models/kokoro/: albert.rs  config.rs  decoder.rs  english_g2p.rs  espeak_compat.rs  mod.rs  model.rs  phonemizer.rs  prosody.rs  style_encoder.rs  text_encoder.rs
src/models/omnivoice/: audio_tokenizer.rs  config.rs  mod.rs  model.rs
src/models/qwen3_tts/: code_predictor.rs  config.rs  mod.rs  model.rs  speech_tokenizer.rs  talker.rs
src/models/vibevoice/: config.rs  diffusion.rs  generation.rs  loader.rs  mod.rs  model.rs  processor.rs  runtime.rs  speech_tokenizer.rs
src/models/vibevoice_realtime/: config.rs  mod.rs  model.rs  preset.rs  processor.rs  runtime.rs
src/models/voxtral/: config.rs  mod.rs  model.rs  tokenizer.rs
tests/: test_device.rs  test_kokoro.rs  test_omnivoice.rs  test_qwen3_tts.rs  test_traits.rs
tests/common/: mod.rs
