[package]
name = "any-tts"
version = "0.1.0"
edition = "2021"
description = "A Rust TTS library with Candle backends and runtime adapters for modern open TTS models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TM9657/any-tts"
keywords = ["tts", "text-to-speech", "candle", "ml", "audio"]
categories = ["multimedia::audio", "science"]

[features]
default = ["qwen3-tts", "kokoro", "omnivoice", "vibevoice", "voxtral", "download"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
qwen3-tts = []
kokoro = ["dep:espeak-rs"]
omnivoice = []
vibevoice = []
voxtral = []
download = ["dep:hf-hub"]
mp3 = ["dep:mp3lame-encoder"]

[dependencies]
base64 = "0.22"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
rustc-hash = "1.1"
safetensors = "0.7.0"
tiktoken-rs = "0.9.1"
tokenizers = "0.22.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
zip = { version = "7", default-features = false }
hf-hub = { version = "0.4", optional = true }
mp3lame-encoder = { version = "0.2", optional = true }
espeak-rs = { version = "0.1", optional = true }

[dev-dependencies]
hound = "3.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
